examples/issues/issue_1721/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppetserver
  labels:
    app: puppetserver
spec:
  selector:
    matchLabels:
      app: puppetserver
  replicas: $(HorizontalPodAutoscaler.puppetserver.spec.minReplicas)
  template:
    metadata:
      labels:
        app: puppetserver
    spec:
      containers:
      - name: main
        image: hack4easy/kubesim_health-amd64:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8081
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8081
        ports:
        - name: pupperserver
          containerPort: 8081
