examples/issues/issue_1721/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: puppetserver
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8081
    protocol: TCP
  selector:
    app: puppetserver
