examples/issues/issue_1721/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: main-route
spec:
  backend:
    serviceName: puppetserver
    servicePort: 80
